<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.newsapp.ui.dashboard.ui.HomeFragment"
        android:label="@string/nav_title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.newsapp.ui.savednews.ui.SavedEventsFragment"
        android:label="@string/nav_title_saved"
        tools:layout="@layout/activity_description" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.newsapp.ui.savednews.ui.SavedEventsFragment"
        android:label="@string/nav_title_settings"
        tools:layout="@layout/activity_description" />
</navigation>